# wisper

./: .replit  app.py  audio_processor.py  pyproject.toml  requirements.txt  transcriber.py
