[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "faster-whisper>=1.1.1",
    "ffmpeg>=1.4",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.85.0",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "speechrecognition>=3.14.3",
    "werkzeug>=3.1.3",
]
